fix Bug #12896 Elevate/Exclude: UI and alignment issue in List view

--- a/searchManager/WebContent/css/bigbets/bigbets.css
+++ b/searchManager/WebContent/css/bigbets/bigbets.css
@@ -159,7 +159,7 @@ height: 20px; margin:0 !important; padding:8px;
 div.listView ul.boxContainer li div.bgShade label { margin:0 !important; padding:0 }
 div.listView ul.boxContainer li div.picInfo { float:left; margin-left:10px }
 div.listView ul.boxContainer li div.picArea { height: 100px; overflow: hidden; margin:17px 10px 10px 10px; float:left }
-div.listView ul.boxContainer li div.titleArea { text-align: center; font-weight: bold; height:18px; vertical-align: middle !important; word-wrap:break-word; overflow:hidden; float:left  }
+div.listView ul.boxContainer li div.titleArea { text-align: left; font-weight: bold; vertical-align: middle !important; word-wrap:break-word; overflow:hidden; float:left  }
 
 div.listView ul.boxContainer li div.proInfo { margin:10px 8px; float:left; margin-left:10px; width:80% }
 div.listView ul.boxContainer li .proName, .proName a { vertical-align: middle !important; color:#3B79C2; word-wrap:break-word;  }
